Add SortOrder interface and generated implementation DTO's
